--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 
 PORT=5000
-DATABASE_URL=
+DATABASE_URL=mongodb+srv://typescript-assignment-2:WpgoVmeFptE2adU9@cluster0.zfjzbub.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
